--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,19 +1,23 @@
-name: CI/CD Pipeline
+name: Node.js CI
+
 on:
   push:
-    branches:
-      - main
-
+    branches: [ "master" ]
+  workflow_dispatch:
 jobs:
-  build:
+  Build:
     runs-on: self-hosted
-    
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Install dependencies
-        run: npm install  # Replace with the appropriate command for your frontend code
-      
-      - name: Build
-        run: npm run build:stage  # Replace with the appropriate build command
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm install -g
+    - run: npm ci
+    - run: chmod +x change-version.sh
+    - run: npm run build:stage
