--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -21,3 +21,7 @@ jobs:
     - run: npm ci
     - run: chmod +x change-version.sh
     - run: npm run build:stage
+    - run: sudo docker login nexus-repo.minagro.local:8090
+    - run: cd /Projects/actions-runner/work/eagro-ui/eagro-ui
+    - run: sudo docker build -t nexus-repo.minagro.local:8090/eagro-analytics:1.1 .
+    - run: sudo docker push nexus-repo.minagro.local:8090/eagro-analytics:1.1
