--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -12,20 +12,40 @@ jobs:
         node-version: [16.x]
         
     steps:
-    - name: Checkout repository
     - uses: actions/checkout@v3
-    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        
-    - name: Install dependencies    
-    - run: npm install -g   
+    - run: npm install -g
     - run: npm ci
     - run: chmod +x change-version.sh
     - run: npm run build:stage
+    
+   # - name: Login to Nexus Package Registry
+   #   uses: docker/login-action@v1
+   #   with:
+   #       registry: ghcr.io
+   #       username: ${{ secrets.REPO_USER }}
+   #       password: ${{ secrets.REPO_TOKEN }}
+    
+   # - run: sudo docker login https://nexus-repo.minagro.local:443
+   # - run: cd /Projects/actions-runner/work/eagro-ui/eagro-ui
+   # - run: sudo docker build -t nexus-repo.minagro.local:443/eagro-analytics:1.4 .
+   # - run: sudo docker push nexus-repo.minagro.local:443/eagro-analytics:1.4
+    
+   # - name: Login to Nexus Package Registry
+   #   uses: docker/login-action@v1
+   #   with:
+   #       registry: ghcr.io
+   #       username: ${{ secrets.REPO_USER }}
+   #       password: ${{ secrets.REPO_TOKEN }}
+    
+   # - run: sudo docker login https://nexus-repo.minagro.local:443
+   # - run: cd /Projects/actions-runner/work/eagro-ui/eagro-ui
+   # - run: sudo docker build -t nexus-repo.minagro.local:443/eagro-analytics:1.4 .
+   # - run: sudo docker push nexus-repo.minagro.local:443/eagro-analytics:1.4
     
    # - name: Login to Nexus Package Registry
    #   uses: docker/login-action@v1
