--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "master" ]
     paths-ignore:
-      - 'ci-cd.yaml'
+      - '.github/workflows/ci-cd.yaml'
   workflow_dispatch:
 jobs:
   Build:
@@ -30,10 +30,10 @@ jobs:
       run: docker login nexus-repo.eagro.az --username admin --password F78d59FrfY9R4xs5D75rVYfPBbHH
       
     - name: Image build
-      run: docker build -t nexus-repo.eagro.az/eagro-analytics:1.6 .
+      run: docker build -t nexus-repo.eagro.az/eagro-analytics:1.7 .
       
     - name: Image Push to Nexus Repo
-      run: docker push nexus-repo.eagro.az/eagro-analytics:1.6
+      run: docker push nexus-repo.eagro.az/eagro-analytics:1.7
       
     - name: Set up Helm
       uses: azure/setup-helm@v1
